--- a/src/scss/_media.scss
+++ b/src/scss/_media.scss
@@ -23,7 +23,7 @@
         &__rating {
             font-size: 12px;
         }
-        &__close {
+        &__close, &__info {
             font-size: 14px;
         }
     }
