--- a/src/scss/blocks/_mylist.scss
+++ b/src/scss/blocks/_mylist.scss
@@ -2,7 +2,7 @@
 .my-list {
     background-color: #252525;
     position: relative;
-    padding-top: 100px;
+    padding: 100px 0;
     .film {
         margin: 50px 0 50px 20px;
         width: 300px;
@@ -44,6 +44,43 @@
     cursor: pointer;
     &:hover {
         background-color: #252525;
+    }
+    
+}
+
+.cards {
+    display: none;
+    background-color: rgba(0,0,0,.7);
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1000;
+    overflow: hidden;
+    
+}
+
+.card {
+    font-size: 14px;
+    display: flex;
+    cursor: pointer;
+    max-width: 600px;
+    margin: 250px auto;
+    padding: auto;
+    background-color: #000;
+    &__img {
+        width: 50%;
+        height: 100%;
+    }
+    &__info {
+        padding: 20px 10px 20px 20px;
+        div {
+            padding-top: 10px;
+        }
+        div:first-child {
+            padding: 0;
+        }
     }
     
 }
