--- a/src/scss/blocks/_topfilms.scss
+++ b/src/scss/blocks/_topfilms.scss
@@ -55,7 +55,7 @@
             border: 2px solid grey;
         }
     }
-    &__close {
+    &__close, &__info {
         position: absolute;            
         right: 10px;
         top: 16px;
@@ -63,9 +63,17 @@
         transition: all .5s;
         padding: 5px;
         border-radius: 10px;
-        &:hover{
+        &:hover {
             background-color: #BB0000;
             
         }
+    }
+    &__info {
+        text-align: center;
+        text-decoration: underline;
+        right: 0;
+        left: 0;
+        margin: 10px;
+        top: 200px;
     }
 }
