--- a/src/scss/blocks/_header.scss
+++ b/src/scss/blocks/_header.scss
@@ -76,6 +76,7 @@
     background-repeat: no-repeat;
     background-size: cover;
     &__content {
+        margin: 0 auto;
         padding-top: 300px;
         max-width: 600px;
         text-align: center;
